# fmnist-gan-rs

./: Cargo.toml
src/: main.rs
