[package]
name = "fmnist-gan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = "0.3.2"
candle-examples = "0.3.2"
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
clap = "4.4.18"
hf-hub = "0.3.2"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
parquet = "=45.0.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokenizers = "0.13.1"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
